--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "svelte": "^3.52.0",
     "svelte-preprocess": "^4.10.7",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "chart.js": "^4.0.1"
   }
 }
