--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sass": "^1.56.1",
     "svelte": "^3.52.0",
     "svelte-preprocess": "^4.10.7",
+    "svelte-range-slider-pips": "^2.1.0",
     "vite": "^3.2.3"
   },
   "dependencies": {
